<resources>
    <string name="app_name">KatsuPay</string>
    <string name="textview">TextView</string>
    <string name="username">UserName</string>
    <string name="userNameEdit">TextView</string>
    <string name="ユーザ名の入力">●ユーザ名を入力してください．</string>
    <string name="userName">UserName</string>
    <string name="パスワードの入力">●パスワードを入力してください．</string>
    <string name="password">Password</string>
    <string name="サインイン用ボタン">サインイン</string>
    <string name="signInResult1">TextView</string>
    <string name="signInResult2">TextView</string>
    <string name="signInLoad">データベースと通信しています...</string>
    <string name="purchacehistory"><![CDATA[< 購入履歴 >]]></string>
    <string name="purchacehistorytext">まだ購入履歴はありません．</string>
    <string name="PurchaseReturnButton">戻る</string>
    <string name="RIReturnButton">戻る</string>
    <string name="RITitle"><![CDATA[< 登録情報 >]]></string>
    <string name="ユーザ名">●ユーザ名</string>
    <string name="MailAddress">●メールアドレス</string>
    <string name="新規登録"><![CDATA[< 新規登録 >]]></string>
    <string name="戻る">戻る</string>
    <string name="EMail">E-MailAddress</string>
    <string name="決定">決定</string>
    <string name="残高">残高：円</string>
    <string name="購入履歴">購入履歴</string>
    <string name="登録情報">登録情報</string>
    <string name="更新">更新</string>
    <string name="再接続">再接続</string>
    <string name="在庫情報">在庫情報</string>
    <string name="在庫情報なし">在庫情報がありません</string>
    <string name="在庫ありのみを表示">在庫ありのみを表示</string>
    <string name="contact">contact us</string>
    <string name="店舗一覧">店舗一覧</string>
    <string name="検索なし">該当データがありません</string>
    <string name="検索">商品名を検索</string>
    <string name="並び替え">並び替え</string>
    <string name="ログアウト">ログアウト</string>
    <string name="ユーザ名様">(ユーザ名)様</string>
    <string name="誕生日">●誕生日</string>
</resources>
