<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp">
            <Button
                    android:text="@string/PurchaseReturnButton"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:id="@+id/PurchaseReturnButton"
                    android:background="#8BC34A"/>
            <TextView
                    android:text="@string/purchacehistory"
                    android:layout_width="match_parent"
                    android:textSize="25sp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView5"
                    android:background="#CDDC39"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:backgroundTint="#CDDC39"/>

        </LinearLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                <TextView
                        android:text="@string/purchacehistorytext"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="match_parent"
                        android:id="@+id/purchase"
                        android:background="#FFFFFF" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>