<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignIn"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:hapticFeedbackEnabled="false">

    <TextView
            android:text="@string/ユーザ名の入力"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:id="@+id/userName"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/userNameEdit" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="ユーザー名"
            android:ems="10"
            android:textSize="20sp"
            android:id="@+id/userNameEdit"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:text="@string/パスワードの入力"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:layout_constraintTop_toBottomOf="@id/userNameEdit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordEdit"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="パスワード（8~40字）"
            android:ems="10"
            android:textSize="20sp"
            android:id="@+id/passwordEdit"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signIn"/>

    <Button
            android:text="@string/サインイン用ボタン"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signIn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#81FFC107"
            app:layout_constraintTop_toBottomOf="@id/passwordEdit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:text="新規登録用のQRコードを読み込む"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpButton"
            android:backgroundTint="#438BC34A"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/signIn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <Button
            android:text="@string/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:backgroundTint="#B9DEE4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/store_stock"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:text="@string/在庫情報"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/store_stock"
            android:backgroundTint="#E4B6C6"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>