<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoreStock">


    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.05"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/在庫情報"
            android:textSize="25sp"
            android:background="#CDDC39"
            android:gravity="center"
            android:textStyle="bold"
            android:backgroundTint="#CDDC39"
            android:layout_marginStart="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/StoStockReturnButton"
            android:id="@+id/textView11" />
    <Button
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:text="@string/PurchaseReturnButton"
            android:textSize="20sp"
            android:backgroundTint="#8BC34A"
            android:id="@+id/StoStockReturnButton"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline3" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp">

        <TextView
                android:text="@string/在庫情報なし"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stockinfo" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>