<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegistrationInformation">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.05"/>

    <Button
            android:text="@string/RIReturnButton"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:id="@+id/RIReturnButton"
            android:textSize="20sp"
            android:backgroundTint="#03A9F4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline1"/>

    <TextView
            android:text="@string/RITitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/textView7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#2F03A9F4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="@id/guideline1"
            app:layout_constraintRight_toRightOf="parent" />

    <TextView
            android:text="@string/ユーザ名"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="#331E88E5"
            android:id="@+id/user"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/userName"
            app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:background="#1A039BE5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/user"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mail"/>

    <TextView
            android:text="@string/MailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/mail"
            android:background="#331E88E5"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/userName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mailAddress"/>

    <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/mailAddress"
            android:background="#1A1E88E5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/mail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/birth"/>

    <TextView
            android:text="@string/誕生日"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birth"
            android:textSize="20sp"
            android:background="#331E88E5"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/mailAddress"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/birthday" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthday"
            android:textSize="20sp"
            android:background="#1A1E88E5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@id/birth"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>