<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="33dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8">
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="7dp"
                    android:layout_weight="1.0"
                    android:id="@+id/dst1"/>
            <Button
                    android:text="@string/更新"
                    android:layout_width="20sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/update"
                    android:layout_weight="0.2"
                    android:textSize="20sp"
                    android:background="#CDDC39"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:id="@+id/dst2"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="center">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:text="@string/残高"
                    android:layout_width="wrap_content"
                    android:textSize="40sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"/>
            <TextView
                    android:text="@string/残高"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:id="@+id/balance"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="129dp">
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        <Button
                android:text="@string/購入履歴"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/purchaseHistoryButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="#03A9F4"
                android:background="#2800BCD4"/>
        <Button
                android:text="@string/登録情報"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/RIButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="#4CAF50"
                android:background="#1D4CAF50"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="ログアウト"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/logout"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="#40FDD835"
                android:textColor="#FB8C00"/>
    </LinearLayout>
</LinearLayout>