<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUp">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.05"/>

    <Button
            android:text="@string/戻る"
            android:layout_width="70sp"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:id="@+id/signUpReturn"
            android:backgroundTint="#FFC107"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline1"/>

    <TextView
            android:text="@string/新規登録"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#34FFC107"
            android:id="@+id/SignUpTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="@id/guideline1"
            app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:isScrollContainer="false"
            app:layout_constraintTop_toTopOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/ユーザ名"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/userName"
                        android:ems="10"
                        android:id="@+id/signUpId"
                        android:autofillHints=""
                        android:editable="true" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30sp">

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/MailAddress"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/EMail"
                        android:ems="10"
                        android:id="@+id/emailAddress"
                        android:importantForAutofill="no" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="●生年月日"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:textSize="20sp" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/birthDayPicker"></LinearLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="●パスワード（8~40文字）"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUpPassword" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="Password"
                        android:ems="10"
                        android:id="@+id/signUpPasswordEdit"
                        android:autofillHints=""
                        android:editable="true" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="●パスワード（確認用）"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUpPasswordVerification" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="Password"
                        android:ems="10"
                        android:id="@+id/signUpPasswordVerificationEdit"
                        android:autofillHints=""
                        android:editable="true" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="61dp">

                <Button
                        android:text="@string/決定"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:id="@+id/SignUpDecide"
                        android:backgroundTint="#7CFF9800" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>