<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context=".SignInOKLayout">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"/>
            <TextView
                    android:text="@string/signInResult2"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:layout_height="25dp"
                    android:id="@+id/signInResult1"
                    android:gravity="center"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="328dp"
                    tools:layout_editor_absoluteX="145dp"/>
            <TextView
                    android:text="@string/signInResult1"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:layout_height="25dp"
                    android:id="@+id/signInResult2"
                    android:gravity="center"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="295dp"
                    tools:layout_editor_absoluteX="145dp"/>
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="176dp"
                    android:id="@+id/textView"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal">
                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/signInLoadProgressBar"
                        tools:layout_editor_absoluteY="690dp"
                        tools:layout_editor_absoluteX="48dp"
                        tools:ignore="MissingConstraints"/>
                <TextView
                        android:text="@string/signInLoad"
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="25dp"
                        android:id="@+id/signInLoad"
                        android:gravity="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="690dp"
                        tools:layout_editor_absoluteX="73dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>